[package]
name = "dsocks"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
async-shutdown = "0.1.3"
axum = { version = "0.6.20", features = ["ws", "headers"] }
bincode = "1.3.3"
bytes = { version = "1.5.0", features = ["serde"] }
clap = { version = "4.4.3", features = ["derive"] }
derive_more = "0.99.17"
env_logger = "0.10.0"
futures = "0.3.28"
http = "0.2.9"
log = "0.4.20"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
socks5-proto = "0.4.0"
tokio = { version = "1.32.0", features = [
    "net",
    "rt-multi-thread",
    "signal",
    "time",
    "sync",
    "io-util",
    "macros",
] }
tokio-stream = { version = "0.1.14", features = ["sync", "net"] }
tokio-tungstenite = { version = "0.20.0", features = ["tokio-rustls", "webpki-roots"] }
